--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 # For more information: https://laravel.com/docs/sail
 version: '3'
 services:
+    composer:
+      image: composer
+      volumes:
+      - ./:/app
+      working_dir: /app
+      command: "composer install"
     laravel-test:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.0
+            context: ./docker/8.0
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
@@ -23,6 +29,7 @@ services:
             - mysql
             - redis
             - selenium
+            - composer
     mysql:
         image: 'mysql:8.0'
         ports:
