laravel container may fail on first run before composer is done

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
             - redis
             - selenium
             - composer
+        restart: unless-stopped
     mysql:
         image: 'mysql:8.0'
         ports:
